--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Il Mio Sito Privato</title>
+    <title>BUDGET MANAGEMENT by LuBaSp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <!-- Contenuto della pagina -->
-        <h1>Benvenuto</h1>
-        <p>Ottimizzata per mobile.</p>
+        <!-- Titolo della pagina -->
+        <h1>BUDGET MANAGEMENT<br><span class="subtitle">by LuBaSp</span></h1>
+
+        <!-- Pulsanti -->
+        <div class="buttons">
+            <a href="entrate.html"><button class="entrate">Entrate</button></a>
+            <a href="uscite.html"><button class="uscite">Uscite</button></a>
+        </div>
     </div>
 </body>
 </html>
