--- a/entrate.html
+++ b/entrate.html
@@ -2,15 +2,26 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalabile=no">
     <title>Entrate - Budget Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Entrate</h1>
-        <p>Benvenuto nella pagina delle entrate. Qui puoi gestire tutte le tue entrate.</p>
-        <a href="index.html" class="back-button">Torna alla pagina principale</a>
+        
+        <!-- Pulsanti per categorie di entrate -->
+        <div class="category-buttons">
+            <button class="category">Bonifici</button>
+            <button class="category">PayPal</button>
+            <button class="category">Borsa di Studio</button>
+            <button class="category">Regali</button>
+            <button class="category">Vincite</button>
+            <button class="category">Altro</button>
+        </div>
+        
+        <!-- Link per tornare alla pagina precedente -->
+        <a href="index.html" class="back-button">INDIETRO</a>
     </div>
 </body>
 </html>
