--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BUDGET MANAGEMENT by LuBaSp</title>
+    <title>Budget Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <!-- Titolo della pagina -->
-        <h1>BUDGET MANAGEMENT<br><span class="subtitle">by LuBaSp</span></h1>
-
-        <!-- Pulsanti -->
+        <h1>BUDGET MANAGEMENT</h1>
+        <p class="subtitle">by LuBaSp</p>
+        
+        <!-- Pulsanti per Entrate e Uscite -->
         <div class="buttons">
             <a href="entrate.html"><button class="entrate">Entrate</button></a>
             <a href="uscite.html"><button class="uscite">Uscite</button></a>
