--- a/uscite.html
+++ b/uscite.html
@@ -2,15 +2,28 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalabile=no">
     <title>Uscite - Budget Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Uscite</h1>
-        <p>Benvenuto nella pagina delle uscite. Qui puoi gestire tutte le tue uscite.</p>
-        <a href="index.html" class="back-button">Torna alla pagina principale</a>
+        
+        <!-- Pulsanti per categorie di uscite -->
+        <div class="category-buttons">
+            <button class="category">Caffè</button>
+            <button class="category">Spesa</button>
+            <button class="category">Svago</button>
+            <button class="category">Bollette</button>
+            <button class="category">Abbonamenti</button>
+            <button class="category">Trasporti</button>
+            <button class="category">Ordini Online</button>
+            <button class="category">Altro</button>
+        </div>
+        
+        <!-- Link per tornare alla pagina precedente -->
+        <a href="index.html" class="back-button">INDIETRO</a>
     </div>
 </body>
 </html>
