--- a/entrate.html
+++ b/entrate.html
@@ -2,25 +2,23 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalabile=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Entrate - Budget Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Entrate</h1>
+        <h1>Gestione Entrate</h1>
         
-        <!-- Pulsanti per categorie di entrate -->
-        <div class="category-buttons">
-            <button class="category">Bonifici</button>
-            <button class="category">PayPal</button>
-            <button class="category">Borsa di Studio</button>
-            <button class="category">Regali</button>
-            <button class="category">Vincite</button>
-            <button class="category">Altro</button>
+        <div class="button-container">
+            <a href="registrazione.html?categoria=bonifici" class="category">Bonifici</a>
+            <a href="registrazione.html?categoria=paypal" class="category">PayPal</a>
+            <a href="registrazione.html?categoria=borsa-di-studio" class="category">Borsa di Studio</a>
+            <a href="registrazione.html?categoria=regali" class="category">Regali</a>
+            <a href="registrazione.html?categoria=vincite" class="category">Vincite</a>
+            <a href="registrazione.html?categoria=altro" class="category">Altro</a>
         </div>
         
-        <!-- Link per tornare alla pagina precedente -->
         <a href="index.html" class="back-button">INDIETRO</a>
     </div>
 </body>
