--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <div class="container">
         <h1>BUDGET MANAGEMENT</h1>
-        <p class="subtitle">by LuBaSp</p>
+        <h2 class="subtitle thin-subtitle">by LuBaSp</h2> <!-- Sottotitolo più piccolo e sottile -->
         
-        <!-- Pulsanti per Entrate e Uscite -->
-        <div class="buttons">
-            <a href="entrate.html"><button class="entrate">Entrate</button></a>
-            <a href="uscite.html"><button class="uscite">Uscite</button></a>
+        <div class="button-container">
+            <a href="entrate.html" class="category entrate-button">Entrate</a>
+            <a href="uscite.html" class="category uscite-button">Uscite</a>
         </div>
     </div>
 </body>
