--- a/uscite.html
+++ b/uscite.html
@@ -2,27 +2,25 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalabile=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Uscite - Budget Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Uscite</h1>
+        <h1>Gestione Uscite</h1>
         
-        <!-- Pulsanti per categorie di uscite -->
-        <div class="category-buttons">
-            <button class="category">Caffè</button>
-            <button class="category">Spesa</button>
-            <button class="category">Svago</button>
-            <button class="category">Bollette</button>
-            <button class="category">Abbonamenti</button>
-            <button class="category">Trasporti</button>
-            <button class="category">Ordini Online</button>
-            <button class="category">Altro</button>
+        <div class="button-container">
+            <a href="registrazione.html?categoria=caffe" class="category">Caffè</a>
+            <a href="registrazione.html?categoria=spesa" class="category">Spesa</a>
+            <a href="registrazione.html?categoria=svago" class="category">Svago</a>
+            <a href="registrazione.html?categoria=bollette" class="category">Bollette</a>
+            <a href="registrazione.html?categoria=abbonamenti" class="category">Abbonamenti</a>
+            <a href="registrazione.html?categoria=trasporti" class="category">Trasporti</a>
+            <a href="registrazione.html?categoria=ordini-online" class="category">Ordini Online</a>
+            <a href="registrazione.html?categoria=altro" class="category">Altro</a>
         </div>
         
-        <!-- Link per tornare alla pagina precedente -->
         <a href="index.html" class="back-button">INDIETRO</a>
     </div>
 </body>
