--- a/uscite.html
+++ b/uscite.html
@@ -17,7 +17,7 @@
             <a href="registrazione.html?categoria=bollette" class="category">Bollette</a>
             <a href="registrazione.html?categoria=abbonamenti" class="category">Abbonamenti</a>
             <a href="registrazione.html?categoria=trasporti" class="category">Trasporti</a>
-            <a href="registrazione.html?categoria=ordini-online" class="category">Ordini Online</a>
+            <a href="registrazione.html?categoria=ordini online" class="category">Ordini Online</a>
             <a href="registrazione.html?categoria=altro" class="category">Altro</a>
         </div>
         
