--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="button-container">
             <a href="entrate.html" class="category entrate-button">Entrate</a>
             <a href="uscite.html" class="category uscite-button">Uscite</a>
+            <a href="visualizza.html" class="category visualizza-button">Visualizza Transazioni</a> <!-- Nuovo pulsante aggiunto -->
         </div>
     </div>
 </body>
